# clion_vcpkg_toml

./: CMakeLists.txt  README.md  main.cpp  usb_info.cpp  usb_info.h
